kafka bug fix
kafka bug fix